--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:14f8081d523cc5f58fcd04c6e90732e97e0363b406b7804e399376d4bc4ff4b8"
+  "signature": "sha256:341dd602719b792e293736ac4eff34b509c0db3a5c20e4466cf6c0d6b1cf92f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1363,10 +1363,10 @@
       "\n",
       "* Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus.\n",
       "\n",
-      "Suppose there are $n$ risky assets on the market, with random return vector $\\bs r$ whose covariance matrix is $V$,\n",
+      "Suppose there are $n$ risky assets on the market, with random return vector $\\tilde{\\bs r}$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\bs w$: a portfolio, its elements are dollar amounts invested in each asset\n",
-      "  * $\\bs w^T \\bs r$ is the portfolio's return in dollar amount\n",
+      "  * $\\bs w^T \\tilde{\\bs r}$ is the portfolio's return in dollar amount\n",
       "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of its return\n",
       "* $\\bs w_b$: a benchmark portfolio, e.g. a sector index\n",
       "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
@@ -1384,7 +1384,7 @@
      },
      "source": [
       "## Excess return forecast\n",
-      "* $\\bs f = \\mathbb{E}[\\bs r] - r_0$ is a vector of excess return forecast of all assets\n",
+      "* $\\bs f = \\mathbb{E}[\\tilde{\\bs r}] - r_0$ is a vector of excess return forecast of all assets\n",
       "  * $r_0$ is the risk free rate\n",
       "* $\\bs f$ is a view, which can be from:\n",
       "  * Fundamental research: earning forcasts, revenue growth etc\n",
@@ -1457,17 +1457,38 @@
       }
      },
      "source": [
+      "## Relativity in return forecast\n",
+      "\n",
+      "Given the characteristics (optimal) portfolio $\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$ for the return forecast $\\bs f$.\n",
+      "\n",
+      "The optimal portfolio is unchanged if $\\bs f$ is scaled by a scalar $a$:\n",
+      "* $\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$, scaling a portfolio by $a$ does not change its composition materially\n",
+      "* the optimal portfolio has to be scaled to match the amount of funds to be invested, the final portfolios are identical from forecast $\\bs f$ or $a \\bs f$\n",
+      "\n",
+      "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense\n",
+      "* it is only important to forecast the relative size of excess returns:\n",
+      "* e.g. with two assets, the excess return forecast of [1%, 2%] and [10%, 20%] would result in identical optimal portfolio\n",
+      "\n",
+      "From now on, the return forecast $\\bs f$ should only be interpreted in the relative sense, we use $\\propto$ to make this explicit."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "## Important characteristic portfolios\n",
       "\n",
-      "Note that $\\bs f$ is only meaningful in a relative sense.\n",
-      "\n",
-      "Identical returns: $\\bs{f = e} = [1, 1, ...., 1]^T$: \n",
+      "Identical returns: $\\bs f \\propto \\bs e = [1, 1, ...., 1]^T$: \n",
       "\n",
       "* A naive view that all assets have the same excess returns (zero information)\n",
       "* $\\bs e^T\\bs w = 1$ means it is a fully invested portfolio of \\$1\n",
       "* $\\bs w_e = \\frac{V^{-1}\\bs e}{\\bs e^TV^{-1}\\bs e}$ has the minimum variance amongst all fully invested portfolio\n",
       "\n",
-      "Beta to a benchmark portfolio: $\\bs{f = \\beta_b} = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
+      "Beta to a benchmark portfolio: $\\bs f \\propto \\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
       "\n",
       "* $\\bs{\\beta_b w} = 1$ means the portfolio has a beta of 1 to the benchmark portfolio $\\bs w_b$\n",
       "* $\\bs w_{\\beta} = \\frac{V^{-1}\\bs \\beta_b}{\\bs \\beta_b^T V^{-1}\\bs \\beta_b} = \\frac{\\bs w_b}{\\bs{\\beta_b^T w_b}} = \\bs w_b$, which is the benchmark portfolio itself\n",
@@ -1484,14 +1505,14 @@
      "source": [
       "## Implied view of a portfolio\n",
       "\n",
-      "From any portfolio, we can backout its implied excess return forecast $\\bs f$\n",
+      "From any portfolio, we can backout its implied excess return forecast $\\bs f$:\n",
       "* The implied forecast is nothing but the betas to the portfolio\n",
-      "* The implied forecast is also only meaningful in a relative sense\n",
+      "* The implied excess return is only meaningful in a relative sense\n",
       "\n",
-      "Consider the market portfolio: the market collectively believe that $\\bs f = \\bs \\beta_m$ \n",
-      "* The actual (as oppose to relative) implied excess return is therefore: \n",
+      "Consider the market portfolio: the market collectively believe that $\\bs f \\propto \\bs \\beta_m$ \n",
+      "* the absolute implied excess return can be obtained by normalizing with market excess return:\n",
       "\n",
-      "$$ \\bs f = \\bs \\beta_m \\left(\\mathbb{E}[\\tilde r_m] - r_0\\right)$$\n",
+      "$$\\mathbb{E}[\\tilde{\\bs r}] - r_0 = \\bs \\beta_m \\left(\\mathbb{E}[\\tilde r_m] - r_0\\right)$$\n",
       "\n",
       "* where $\\tilde r_m$ is the market portfolio's return, this is exactly the CAPM.\n",
       "\n",
