--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:341dd602719b792e293736ac4eff34b509c0db3a5c20e4466cf6c0d6b1cf92f4"
+  "signature": "sha256:46f22f5b7e1a9e41acf96643af8e066fb96082c853db0907b81906b83e14c3e1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1444,9 +1444,7 @@
       "$$ \\bs f^T(\\lambda V^{-1} \\bs f) = 1 \\iff \\lambda = \\frac{1}{\\bs f^T V^{-1} \\bs f}$$\n",
       "$$\\bs w = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
-      "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$.\n",
-      "* the resulting portfolio composition is unchanged if $\\bs f$ is scaled by a constant\n",
-      "* $\\bs f$ forecast is therefore only meaningful in a relative sense"
+      "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$."
      ]
     },
     {
@@ -1457,19 +1455,19 @@
       }
      },
      "source": [
-      "## Relativity in return forecast\n",
+      "## Relativity of return forecast\n",
       "\n",
-      "Given the characteristics (optimal) portfolio $\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$ for the return forecast $\\bs f$.\n",
+      "Given the optimal portfolio $\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$.\n",
       "\n",
       "The optimal portfolio is unchanged if $\\bs f$ is scaled by a scalar $a$:\n",
-      "* $\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$, scaling a portfolio by $a$ does not change its composition materially\n",
+      "* $\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$, scaling a portfolio by $a$ does not change the optimal portfolio's composition\n",
       "* the optimal portfolio has to be scaled to match the amount of funds to be invested, the final portfolios are identical from forecast $\\bs f$ or $a \\bs f$\n",
       "\n",
-      "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense\n",
-      "* it is only important to forecast the relative size of excess returns:\n",
+      "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
+      "* it is only important to forecast the relative size of excess returns\n",
       "* e.g. with two assets, the excess return forecast of [1%, 2%] and [10%, 20%] would result in identical optimal portfolio\n",
       "\n",
-      "From now on, the return forecast $\\bs f$ should only be interpreted in the relative sense, we use $\\propto$ to make this explicit."
+      "The return forecast $\\bs f$ should only be interpreted in a relative sense, we use $\\propto$ to make this explicit."
      ]
     },
     {
@@ -1506,17 +1504,18 @@
       "## Implied view of a portfolio\n",
       "\n",
       "From any portfolio, we can backout its implied excess return forecast $\\bs f$:\n",
-      "* The implied forecast is nothing but the betas to the portfolio\n",
-      "* The implied excess return is only meaningful in a relative sense\n",
+      "* It is nothing but the betas to the portfolio\n",
+      "* Only meaningful in a relative sense as well\n",
+      "* Has to be normalized to produce absolute excess return forecast\n",
       "\n",
-      "Consider the market portfolio: the market collectively believe that $\\bs f \\propto \\bs \\beta_m$ \n",
+      "Consider the market portfolio: the market collectively believe that $\\bs f \\propto \\bs \\beta_m$: \n",
       "* the absolute implied excess return can be obtained by normalizing with market excess return:\n",
       "\n",
       "$$\\mathbb{E}[\\tilde{\\bs r}] - r_0 = \\bs \\beta_m \\left(\\mathbb{E}[\\tilde r_m] - r_0\\right)$$\n",
       "\n",
       "* where $\\tilde r_m$ is the market portfolio's return, this is exactly the CAPM.\n",
       "\n",
-      "The implied view is a much better estimate of returns than using historical data.\n",
+      "The implied excess return is a much better return estimate than historical data.\n",
       "* How many years of historical data do we need to reliably estimate expected returns?"
      ]
     },
