--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:46f22f5b7e1a9e41acf96643af8e066fb96082c853db0907b81906b83e14c3e1"
+  "signature": "sha256:6ceb22028c55f142851f5ca1dce3f1c276532be00dbdfdc75078f2a3e0a47ca0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1442,9 +1442,9 @@
       "plug it into $\\bs f^T \\bs w = 1$:\n",
       "\n",
       "$$ \\bs f^T(\\lambda V^{-1} \\bs f) = 1 \\iff \\lambda = \\frac{1}{\\bs f^T V^{-1} \\bs f}$$\n",
-      "$$\\bs w = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
+      "$$\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
-      "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$."
+      "$\\bs w (\\bs f)$ is often called the characteristic portfolio for the excess return forecast $\\bs f$."
      ]
     },
     {
@@ -1457,17 +1457,18 @@
      "source": [
       "## Relativity of return forecast\n",
       "\n",
-      "Given the optimal portfolio $\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$.\n",
+      "The optimal portfolio composition remain unchanged if $\\bs f$ is scaled by a scalar $a$\n",
       "\n",
-      "The optimal portfolio is unchanged if $\\bs f$ is scaled by a scalar $a$:\n",
-      "* $\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$, scaling a portfolio by $a$ does not change the optimal portfolio's composition\n",
-      "* the optimal portfolio has to be scaled to match the amount of funds to be invested, the final portfolios are identical from forecast $\\bs f$ or $a \\bs f$\n",
+      "$$\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$$ \n",
+      "\n",
+      "* the portfolio $\\bs w$ and $\\frac{1}{a} \\bs w$ has no material difference \n",
+      "* they are identical after the scaling to match the dollar amount to be invested\n",
       "\n",
       "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
       "* it is only important to forecast the relative size of excess returns\n",
-      "* e.g. with two assets, the excess return forecast of [1%, 2%] and [10%, 20%] would result in identical optimal portfolio\n",
+      "* e.g. excess return forecast of [1%, 2%] and [10%, 20%] of two assets would result in identical optimal portfolio\n",
       "\n",
-      "The return forecast $\\bs f$ should only be interpreted in a relative sense, we use $\\propto$ to make this explicit."
+      "The return forecast $\\bs f$ should only be interpreted in a relative sense, we use $\\propto$ to make it explicit."
      ]
     },
     {
