--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:6ceb22028c55f142851f5ca1dce3f1c276532be00dbdfdc75078f2a3e0a47ca0"
+  "signature": "sha256:959b542f1a78c473e442fef4a39587bb528f3e92b03d8292383eed7985191a49"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1444,7 +1444,7 @@
       "$$ \\bs f^T(\\lambda V^{-1} \\bs f) = 1 \\iff \\lambda = \\frac{1}{\\bs f^T V^{-1} \\bs f}$$\n",
       "$$\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
-      "$\\bs w (\\bs f)$ is often called the characteristic portfolio for the excess return forecast $\\bs f$."
+      "$\\bs w (\\bs f)$ is often called the characteristic portfolio for the forecast $\\bs f$."
      ]
     },
     {
@@ -1457,12 +1457,12 @@
      "source": [
       "## Relativity of return forecast\n",
       "\n",
-      "The optimal portfolio composition remain unchanged if $\\bs f$ is scaled by a scalar $a$\n",
+      "The optimal portfolio is invariant if $\\bs f$ is scaled by a scalar $a$:\n",
       "\n",
       "$$\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$$ \n",
       "\n",
       "* the portfolio $\\bs w$ and $\\frac{1}{a} \\bs w$ has no material difference \n",
-      "* they are identical after the scaling to match the dollar amount to be invested\n",
+      "* no difference after the scaling to match the dollar amount to be invested\n",
       "\n",
       "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
       "* it is only important to forecast the relative size of excess returns\n",
@@ -1507,10 +1507,10 @@
       "From any portfolio, we can backout its implied excess return forecast $\\bs f$:\n",
       "* It is nothing but the betas to the portfolio\n",
       "* Only meaningful in a relative sense as well\n",
-      "* Has to be normalized to produce absolute excess return forecast\n",
+      "* Normalization required to produce absolute excess return forecast\n",
       "\n",
       "Consider the market portfolio: the market collectively believe that $\\bs f \\propto \\bs \\beta_m$: \n",
-      "* the absolute implied excess return can be obtained by normalizing with market excess return:\n",
+      "* the absolute implied excess return by normalizing to the market excess return:\n",
       "\n",
       "$$\\mathbb{E}[\\tilde{\\bs r}] - r_0 = \\bs \\beta_m \\left(\\mathbb{E}[\\tilde r_m] - r_0\\right)$$\n",
       "\n",
