--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:8d7cfc6351c790d0d3be782b0d438a96b29e384c61d340aa002423d12baaab03"
+  "signature": "sha256:2cc38b31de03b79519e98e7175e05d5d1c920ed4b892f7fb5635b53bdfea6c97"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1670,6 +1670,7 @@
      "source": [
       "$$\\exp(-9 r_9)\\exp(-(10-9) f_9^{10} ) = \\exp(-10 r_{10}) \\iff r_{10} = 0.9r_9 + 0.1f_9^{10} $$\n",
       "\n",
+      "* the $f_9^{10}$ is the 9Y to 10Y forward rate as observed at $t=0$.\n",
       "* The correlation between spot rates are spurious because 10Y spot rate is largely determined by the 9Y spot rates.\n",
       "* it makes no difference if we have unlimited precision, but we usually only keep few eigen vectors in PCA\n",
       "* it's better to model the correlation/covariance matrix of forward rates"
