--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:2cc38b31de03b79519e98e7175e05d5d1c920ed4b892f7fb5635b53bdfea6c97"
+  "signature": "sha256:ed6814af851513adcc442c8ba3ca9f679ba2bb3c8a914637cafae01c5750b490"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -392,7 +392,7 @@
       "* $A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
       "* all eigenvalues are positive if and only if $A$ is SPD\n",
       "\n",
-      "The conclusion holds even if there are duplicated eigen values, with some care. "
+      "The conclusion holds even when there are duplicated eigen values, with some care. "
      ]
     },
     {
