--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:959b542f1a78c473e442fef4a39587bb528f3e92b03d8292383eed7985191a49"
+  "signature": "sha256:4cb154c36df067a13a504169eb36a389da83d9c3e8b545dc83d787fc81253865"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1462,7 +1462,7 @@
       "$$\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$$ \n",
       "\n",
       "* the portfolio $\\bs w$ and $\\frac{1}{a} \\bs w$ has no material difference \n",
-      "* no difference after the scaling to match the dollar amount to be invested\n",
+      "* identical after the scaling to match the dollar amount to be invested\n",
       "\n",
       "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
       "* it is only important to forecast the relative size of excess returns\n",
