--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:b1ab083b6bdde117c5793a24da2d0698af6c44604894061bf01d5ef85bca5326"
+  "signature": "sha256:ab53247b16061e8a4fc848f0b815230fd8dff902495689f70d4e0c60834e1524"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2349,6 +2349,8 @@
      "source": [
       "## Allocation Summary\n",
       "\n",
+      "<small>\n",
+      "\n",
       "| Criteria | C-Shapley (CAS) | A-S (Euler) | Shapley | Standalone |\n",
       "| :---: | :---: | :---: | :---: | :---: |\n",
       "| Associativity | yes | yes | <font color=red> no </font> | <font color=red> no </font> |\n",
@@ -2359,11 +2361,13 @@
       "| Recognize main risk driver | best | good | best | <font color=red> poor </font> |\n",
       "| Computational speed | good | good | <font color=red> poor </font> | best |\n",
       "\n",
+      "</small>\n",
+      "\n",
       "C-Shapley/CAS allocation:\n",
       "* stands out with the best set of features\n",
       "* a candidate for universal risk capital allocation method\n",
       "  * applicable to a wide variety of risk capital metrics in banks\n",
-      "  * applicable to the risk allocations of buy side firms' multiple trading strategies"
+      "  * applicable to the risk allocations of multiple trading strategies"
      ]
     },
     {
@@ -2622,10 +2626,6 @@
      },
      "source": [
       "# Assignments\n",
-      "\n",
-      "Recommended readings\n",
-      "\n",
-      "* <a href=http://www.aclweb.org/anthology/W03-1018>\"Evaluation and Extension of Maximum Entropy Models with Inequality Constraints\"</a>, Kazama and Tsujii\n",
       "\n",
       "Homework\n",
       "\n",
