--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:ab53247b16061e8a4fc848f0b815230fd8dff902495689f70d4e0c60834e1524"
+  "signature": "sha256:d3a012743ca265238e978b3278d972f6f5219efa0e7bef0ea97b5b0639695674"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2350,6 +2350,7 @@
       "## Allocation Summary\n",
       "\n",
       "<small>\n",
+      "<center>\n",
       "\n",
       "| Criteria | C-Shapley (CAS) | A-S (Euler) | Shapley | Standalone |\n",
       "| :---: | :---: | :---: | :---: | :---: |\n",
