--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d3a012743ca265238e978b3278d972f6f5219efa0e7bef0ea97b5b0639695674"
+  "signature": "sha256:533eb250f23dc4e76d604be96df6fb608c4614f704b11adc4b8fed5ae16196e0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2362,7 +2362,10 @@
       "| Recognize main risk driver | best | good | best | <font color=red> poor </font> |\n",
       "| Computational speed | good | good | <font color=red> poor </font> | best |\n",
       "\n",
+      "</center>\n",
       "</small>\n",
+      "\n",
+      "\n",
       "\n",
       "C-Shapley/CAS allocation:\n",
       "* stands out with the best set of features\n",
