--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:034e1ea73509a0176b3c7548a55522c455bc128ef6ece22434276afad7acf0cc"
+  "signature": "sha256:4b74870b428c1ed4ad5771178b6f39ae6c252bb9b4e78100c039d4e64fdbc7f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2349,7 +2349,7 @@
      "source": [
       "## Allocation Summary\n",
       "\n",
-      "| Criteria | C-Shapley (CAS) | A-S (Euler) | Shapley | Standalone |\n",
+      "| Criteria | C-S/CAS | A-S/Euler | Shapley | Standalone |\n",
       "| :---: | :---: | :---: | :---: | :---: |\n",
       "| Associativity | yes | yes | <font color=red> no </font> | <font color=red> no </font> |\n",
       "| Negative allocations for hedges | yes | yes | yes | <font color=red> no </font> |\n",
