--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4b74870b428c1ed4ad5771178b6f39ae6c252bb9b4e78100c039d4e64fdbc7f7"
+  "signature": "sha256:5d3ee678a4b011445a13566678a58255d2e444f14c7cf404c9546ca19074f18a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2016,6 +2016,46 @@
       }
      },
      "source": [
+      "## Associativity\n",
+      "\n",
+      "Associativity means a top-down applicaiton of the allocation yields identical results as a bottom-up application:\n",
+      "\n",
+      "<center>\n",
+      "<img src=\"img/assoc.png\" width=400 height=400>\n",
+      "</center>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Neither standalone nor Shapley allocation is associative:\n",
+      "\n",
+      "| | allocation to [A] | allocation to [BC] |\n",
+      "| :---:| :---:| :---:\n",
+      "| Top-down | 12 | 0 |\n",
+      "| Standalone bottom-up | 4 | 8 |\n",
+      "| Shapley bottom-up | 10 | 2 |\n",
+      "\n",
+      "Associativity is critical in practice:\n",
+      "* Without it, the allocation algorithm is vulnerable to manipulations via trade rebooking.\n",
+      "\n",
+      "The strategy of attack:\n",
+      "* Tweak the Shapley allocation to make it associative"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "## Aumann-Shapley allocation\n",
       "\n",
       "A continuous limit of the Shapley allocation with allocation units being trades with infinitesimal notionals. \n",
@@ -2027,6 +2067,7 @@
       "* $\\bs u$ is the allocation per unit notional of trades\n",
       "* the allocation to individual trades in the i-th unit are $\\bs u \\odot \\bs w_i$, where $\\odot$ is element-wise multiplication\n",
       "* the allocation to a portfolio is therefore $\\xi_i = \\bs u^T \\bs w_i$.\n",
+      "* Associative by construction\n",
       "\n",
       "A-S allocation is much more efficient to compute than Shapley allocation."
      ]
@@ -2041,15 +2082,16 @@
      "source": [
       "## The big blender\n",
       "\n",
-      "Conceptually A-S allocation, \n",
+      "Conceptually the A-S allocation, \n",
       "$\\bs u^T = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial (q \\bs w)} dq $, \n",
-      " is a Big Blender$^{\\text{TM}}$:\n",
+      " is a big blender:\n",
       "\n",
       "\n",
       "<img src=\"img/bigblender.png\" width=200 height=200>\n",
       "\n",
       "\n",
-      "* all organizational information are lost"
+      "* all organizational information are lost\n",
+      "* the allocation is computed from a homogenous soup of trades"
      ]
     },
     {
@@ -2109,49 +2151,12 @@
       "$$\n",
       "\n",
       "* $\\frac{d}{dx} \\max(x, 0) = \\ind(x > 0)$, where $\\ind(\\cdot)$ is the indicator function\n",
-      "* the allocation is trade's MtM if the total PV is positive, otherwise 0.\n",
+      "* the allocation is trade's MtM if the total PV is positive, otherwise 0\n",
+      "* it is indeed associative, the sum of allocation to B and C is 0\n",
       "\n",
       "|  | A | B | C | Total |\n",
       "| :--: | :--: | :--: | :--: |:--: |\n",
       "| A-S/Euler Allocation | 12 | 24 | -24 | 12 |"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "## Associativity\n",
-      "\n",
-      "Associativity means a top-down applicaiton of the allocation yields identical results as a bottom-up application:\n",
-      "\n",
-      "<center>\n",
-      "<img src=\"img/assoc.png\" width=400 height=400>\n",
-      "</center>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Only the A-S/Euler allocation is associative, as shown below:\n",
-      "\n",
-      "| | allocation to [A] | allocation to [BC] |\n",
-      "| :---:| :---:| :---:\n",
-      "| Top-down | 12 | 0 |\n",
-      "| Standalone bottom-up | 4 | 8 |\n",
-      "| Shapley bottom-up | 10 | 2 |\n",
-      "| A-S/Euler bottom-up | 12 | 0 |\n",
-      "\n",
-      "Associativity is critical in practice:\n",
-      "* Without it, the allocation algorithm is vulnerable to manipulations via trade rebooking."
      ]
     },
     {
