--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:5d3ee678a4b011445a13566678a58255d2e444f14c7cf404c9546ca19074f18a"
+  "signature": "sha256:4e5da9f11a1418a3b309d3468fbedf51cfb1dc201c262d2921ddaada28499585"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2302,7 +2302,7 @@
       }
      },
      "source": [
-      "## Business Incentives\n",
+      "## Business incentives\n",
       "\n",
       "We take the following simple bank as an example:\n",
       "\n",
@@ -2327,7 +2327,7 @@
       }
      },
      "source": [
-      "## Allocation Comparisons\n",
+      "## Allocation comparison\n",
       "\n",
       "<table style=\"border-style:hidden\">\n",
       "<tr style=\"border-style:hidden\">\n",
@@ -2352,7 +2352,7 @@
       }
      },
      "source": [
-      "## Allocation Summary\n",
+      "## Allocation summary\n",
       "\n",
       "| Criteria | C-S/CAS | A-S/Euler | Shapley | Standalone |\n",
       "| :---: | :---: | :---: | :---: | :---: |\n",
@@ -2499,7 +2499,7 @@
       }
      },
      "source": [
-      "## Efficiency and Separability\n",
+      "## Efficiency and separability\n",
       "\n",
       "For separable metrics, CAS allocation reduces to:\n",
       "\n",
