--- a/Homework10.ipynb
+++ b/Homework10.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6786e4a5719f524fb8974620ed247bbc333fb1030f88561405611cf71ca2d3f1"
+  "signature": "sha256:ae8301cebbf5f907548aaabeca6ae56d437e3ac103e66942af8e050ab120f413"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,7 +26,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
