--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4cb154c36df067a13a504169eb36a389da83d9c3e8b545dc83d787fc81253865"
+  "signature": "sha256:055c00defdbbb116a0ea50ae7d5896bbda1a1ca338dea7dd3896f0a1a125cdeb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1366,8 +1366,8 @@
       "Suppose there are $n$ risky assets on the market, with random return vector $\\tilde{\\bs r}$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\bs w$: a portfolio, its elements are dollar amounts invested in each asset\n",
-      "  * $\\bs w^T \\tilde{\\bs r}$ is the portfolio's return in dollar amount\n",
-      "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of its return\n",
+      "  * $\\bs w^T \\tilde{\\bs r}$ is the portfolio's P&L in dollar amount\n",
+      "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of the portfolio P&L\n",
       "* $\\bs w_b$: a benchmark portfolio, e.g. a sector index\n",
       "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
       "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = 1$, the benchmark portfolio itself has a beta of 1\n",
@@ -1402,11 +1402,11 @@
      "source": [
       "## Optimal portfolio and Sharp Ratio\n",
       "Given the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
-      " * minimize the variance (risk): $\\bs w^TV\\bs w$\n",
-      " * while preserving an unit dollar of excess P&L: $\\bs w^T \\bs f = 1$\n",
+      " * minimize the variance of portfolio P&L (risk): $\\bs w^TV\\bs w$\n",
+      " * while preserving a unit dollar of excess P&L: $\\bs w^T \\bs f = 1$\n",
       " \n",
-      "which gives a portfolio with the largest Sharp ratio under the view $\\bs f$.\n",
-      "* it can then be scaled to match the dollar amount to be invested\n",
+      "which solves a portfolio with the largest Sharp ratio under the view $\\bs f$.\n",
+      "* the optimal portfolio can then be scaled to match the dollar amount to be invested\n",
       "* the scaling does not change the portfolio's Sharp ratio and optimality "
      ]
     },
@@ -1444,7 +1444,7 @@
       "$$ \\bs f^T(\\lambda V^{-1} \\bs f) = 1 \\iff \\lambda = \\frac{1}{\\bs f^T V^{-1} \\bs f}$$\n",
       "$$\\bs w(\\bs f) = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
-      "$\\bs w (\\bs f)$ is often called the characteristic portfolio for the forecast $\\bs f$."
+      "$\\bs w (\\bs f)$ is also known as the characteristic portfolio for the forecast $\\bs f$."
      ]
     },
     {
@@ -1461,7 +1461,7 @@
       "\n",
       "$$\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$$ \n",
       "\n",
-      "* the portfolio $\\bs w$ and $\\frac{1}{a} \\bs w$ has no material difference \n",
+      "* the portfolio $\\bs w$ and $\\frac{1}{a} \\bs w$ have no material difference \n",
       "* identical after the scaling to match the dollar amount to be invested\n",
       "\n",
       "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
@@ -1505,7 +1505,7 @@
       "## Implied view of a portfolio\n",
       "\n",
       "From any portfolio, we can backout its implied excess return forecast $\\bs f$:\n",
-      "* It is nothing but the betas to the portfolio\n",
+      "* It is nothing but the betas to the portfolio, following previous slides\n",
       "* Only meaningful in a relative sense as well\n",
       "* Normalization required to produce absolute excess return forecast\n",
       "\n",
