--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4e5da9f11a1418a3b309d3468fbedf51cfb1dc201c262d2921ddaada28499585"
+  "signature": "sha256:8c3eaa6687a0e0767e20d6747f54a3ef3604f70bd6a613d95f2e10062a5566fa"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2044,7 +2044,7 @@
       "Associativity is critical in practice:\n",
       "* Without it, the allocation algorithm is vulnerable to manipulations via trade rebooking.\n",
       "\n",
-      "The strategy of attack:\n",
+      "The direction of attack:\n",
       "* Tweak the Shapley allocation to make it associative"
      ]
     },
@@ -2108,7 +2108,7 @@
       "\n",
       "$$\\begin{array}\n",
       "\\\\ \\sum_i \\xi_i &= \\sum_i \\bs u^T \\bs w_i = \\bs u^T \\bs w \\\\\n",
-      "&= \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial q \\bs w} \\bs w \\; dq = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial q \\bs w} \\frac{\\partial q \\bs w}{\\partial q} \\; dq \\\\\n",
+      "&= \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial (q \\bs w)} \\bs w \\; dq = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial (q \\bs w)} \\frac{\\partial q \\bs w}{\\partial q} \\; dq \\\\\n",
       "&= \\int_0^1 d c(q\\bs w) = c(\\bs w) - c(\\bs 0)\n",
       "\\end{array}$$\n",
       "\n",
@@ -2127,7 +2127,7 @@
       "\n",
       "If the cost function is homogeneous, ie, $c(q \\bs w) = q c(\\bs w)$, the A-S allocation reduces to the Euler allocation:\n",
       "\n",
-      "$$ \\bs u^T = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial q \\bs w} dq = \\int_0^1 \\frac{\\partial c(\\bs w)} { \\partial \\bs w} dq  = \\frac{ \\partial c(\\bs w)} {\\partial \\bs w} $$\n",
+      "$$ \\bs u^T = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial (q \\bs w)} dq = \\int_0^1 \\frac{\\partial c(\\bs w)} { \\partial \\bs w} dq  = \\frac{ \\partial c(\\bs w)} {\\partial \\bs w} $$\n",
       "\n",
       "* In practice, most risk capital metrics are homogenous\n",
       "* Euler allocation is by trades' marginal contribution\n",
