--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:8c3eaa6687a0e0767e20d6747f54a3ef3604f70bd6a613d95f2e10062a5566fa"
+  "signature": "sha256:ddfc9083e81168f3fce75fef417c080c906a19a74a1e7351751abf598cab4b45"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -843,7 +843,7 @@
      "source": [
       "## Use the prior belief\n",
       "\n",
-      "We can take advantage of the prior belief that the stock return is lognormal, and use the observed ATM vol in the prior.  \n",
+      "We can take advantage of the prior belief that the stock return is normal, and use the observed ATM vol in the prior.  \n",
       "\n",
       "* The resulting distribution and volatility skew are reasonble\n",
       "* The whole vol skew curve is inferred from three option prices\n",
