--- a/Homework10.ipynb
+++ b/Homework10.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ae8301cebbf5f907548aaabeca6ae56d437e3ac103e66942af8e050ab120f413"
+  "signature": "sha256:e9a9af7e7bc5b754ff38d01e045517a5c666c3d27234092ff5fd54d29bec580e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -93,11 +93,18 @@
       "\n",
       "A classic problem of Shapley allocation is the glove game, where three players A, B, C each has a single glove of left, left and right hand. Assuming that one pair of gloves with left and right hand worth $1, and unpaired gloves are worthless. \n",
       "\n",
-      "1. apply Shapley allocation to divide the $1 total value among the three players, by listing all possible permutations and take the average.\n",
+      "1. apply Shapley allocation to divide the \\$1 total value among the three players, by listing all possible permutations and take the average.\n",
       "2. can you compute the stand-alone or Euler allocation for this game?\n",
       "3. suppose B and C belongs to the same team, and A belongs to a different team, compute the allocation between two teams of [A] and [BC] using both Shapley and Constrained Shapley; comment on which allocation gives more sensible results. \n",
+      "4. Repeat 3, but this time A and B (the two left hands) formed a team, while C is on his own. How does the results change?\n",
+      "5. derive the general case with 1 right glove and $n$ left goves, derive the allocation to the right hand glove under following two cases:\n",
+      "  1. no teams, under Shapley allocation\n",
+      "  2. all the $n$ left hands formed a term, under C-Shapley allocation\n",
+      "6. [open question] comment on whether fairness depends on organization\n",
       "\n",
-      "Hint: since the number of players are small, you can enumerate all possible permutations."
+      "Hints:\n",
+      "* For #1: since the number of players are small, you can enumerate all possible permutations.\n",
+      "* For #5A: you only need to consider all the positions the right hand glove can appear amongst the $n$ left gloves, and the incremental contribution of the right hand glove at each position."
      ]
     }
    ],
