--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:2a77be585fcbe35c7e8fa407a578ca7ef9e0255bd0f4d0fad1fe591e29e01b4a"
+  "signature": "sha256:83ec7730da88e3fb0c6c4463f03bc0f099f8734318613f38d24cf297ea03689c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2126,10 +2126,10 @@
       "\n",
       "$$ \\bs u^T = \\int_0^1 \\frac{\\partial c(q\\bs w)}{\\partial (q \\bs w)} dq = \\int_0^1 \\frac{\\partial c(\\bs w)} { \\partial \\bs w} dq  = \\frac{ \\partial c(\\bs w)} {\\partial \\bs w} $$\n",
       "\n",
-      "* In practice, most risk capital metrics are homogenous\n",
+      "* In practice, most risk capital metrics are homogeneous\n",
       "* Euler allocation is by trades' marginal contribution\n",
       "* A-S/Euler allocation are computationtally efficient\n",
-      "  * no Monte Carlo required"
+      "  * no need for Monte Carlo"
      ]
     },
     {
