--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:055c00defdbbb116a0ea50ae7d5896bbda1a1ca338dea7dd3896f0a1a125cdeb"
+  "signature": "sha256:6238bc91b2810c371b793634fc6b765ec0c5e791c8d1c21d0a5f99033fe2eff5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1302,7 +1302,7 @@
       "\n",
       "$$f(\\bs x) = f(x_1, ..., x_n)$$\n",
       "\n",
-      "* Derivative to vector (Gradient): $\\frac{\\partial f}{\\partial \\bs x} = \\nabla f = [\\frac{\\partial f}{\\partial x_1}, ..., \\frac{\\partial f}{\\partial x_1}]$\n",
+      "* Derivative to vector (Gradient): $\\frac{\\partial f}{\\partial \\bs x} = \\nabla f = [\\frac{\\partial f}{\\partial x_1}, ..., \\frac{\\partial f}{\\partial x_n}]$\n",
       "* Note that $\\frac{\\partial f}{\\partial \\bs x}$ is a **row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed."
      ]
     },
