--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:83ec7730da88e3fb0c6c4463f03bc0f099f8734318613f38d24cf297ea03689c"
+  "signature": "sha256:aae4358637a1eeb6a2a07d37e2e2d30098ac804c96543788ac66a3520b367423"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1881,7 +1881,8 @@
       "Business incentive is a critical consideration.\n",
       "* allocated capital is actively managed by business heads\n",
       "* allocation method directly affects trading desks' behaviour\n",
-      "* allocation method should incentivize risk reduction"
+      "* allocation method should incentivize risk reduction\n",
+      "  * a business unit's action to reduce the firm's overall risk should also reduce its own allocaton"
      ]
     },
     {
@@ -1962,7 +1963,7 @@
      "source": [
       "## A model for fairness\n",
       "\n",
-      "Fairness in allocation is defined axiomatically by:\n",
+      "In cooperative game theory, Fairness is defined by the following axioms:\n",
       "\n",
       "* efficiency: allocations sum up to total\n",
       "* symmetry: if two units' contribution are identical to any arbitrary subsets of units, their allocations are the same\n",
@@ -2064,7 +2065,7 @@
       "* $\\bs u$ is the allocation per unit notional of instruments\n",
       "* the allocation to individual trades in the i-th unit are $\\bs u \\odot \\bs w_i$, where $\\odot$ is element-wise multiplication\n",
       "* the allocation to a portfolio is therefore $\\xi_i = \\bs u^T \\bs w_i$.\n",
-      "* Associative by construction\n",
+      "* Associative by construction: inherited from vector summation\n",
       "\n",
       "A-S allocation is much more efficient to compute than Shapley allocation."
      ]
@@ -2367,6 +2368,28 @@
       "* a candidate for universal risk capital allocation method\n",
       "  * applicable to a wide variety of risk capital metrics in banks\n",
       "  * applicable to the risk allocations of multiple trading strategies"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Achieve the impossible\n",
+      "\n",
+      "Change allocation methodology is almost mission impossible:\n",
+      "* zero-sum: a desk's gain is another desk's loss\n",
+      "* it affects the interests and livelihood of every business unit\n",
+      "* diffcult to build consensus amongst business units with conflicting interests\n",
+      "\n",
+      "The only way to implement the change is to:\n",
+      "* establish a theoreticaly sound methodology that is impossible to argue against (C-Shapley/CAS)\n",
+      "* explain the methodology to every business unit, and ask business heads to document their objections\n",
+      "  * \"I don't like my allocation\" is not a good objection\n",
+      "* the process takes time and effort"
      ]
     },
     {
