--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:aae4358637a1eeb6a2a07d37e2e2d30098ac804c96543788ac66a3520b367423"
+  "signature": "sha256:71d86bd46644bc6af84875c30b4b1d646caaf9d1dd0be168b0f402ca64ad5166"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1882,7 +1882,7 @@
       "* allocated capital is actively managed by business heads\n",
       "* allocation method directly affects trading desks' behaviour\n",
       "* allocation method should incentivize risk reduction\n",
-      "  * a business unit's action to reduce the firm's overall risk should also reduce its own allocaton"
+      "  * a business unit's action to reduce the firm's overall risk should also reduce its own allocation"
      ]
     },
     {
@@ -1963,7 +1963,7 @@
      "source": [
       "## A model for fairness\n",
       "\n",
-      "In cooperative game theory, Fairness is defined by the following axioms:\n",
+      "In cooperative game theory, fairness is modeled by the following axioms:\n",
       "\n",
       "* efficiency: allocations sum up to total\n",
       "* symmetry: if two units' contribution are identical to any arbitrary subsets of units, their allocations are the same\n",
