corrections, credit to Yishen

--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:71d86bd46644bc6af84875c30b4b1d646caaf9d1dd0be168b0f402ca64ad5166"
+  "signature": "sha256:5377b3e1c67b417823af15eb78f82b98facd981687d6ecfca2fdc154c48528a7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -455,13 +455,13 @@
      "source": [
       "## Properties of cross entropy\n",
       "\n",
-      "Cross entropy $h(\\bs p| \\bs q) = \\bs p^T(\\log(\\bs p) - \\log(\\bs q))$:\n",
+      "Cross entropy $h(\\bs p| \\bs q) = - \\bs p^T(\\log(\\bs p) - \\log(\\bs q))$:\n",
       "* a measure of the lack of incremental information in $\\bs p$ from $\\bs q$:\n",
       "* reduces to regular entropy when the prior $\\bs q$ is uniform\n",
       "* maximized with value 0 when $\\bs p = \\bs q$.\n",
       " * no additional information\n",
       " * Proof: apply the Lagrange multiplier\n",
-      "* $h(\\bs q| \\bs p) = -\\infty$ if $p_k > 0$ for some $q_k = 0$\n",
+      "* $h(\\bs p| \\bs q) = -\\infty$ if $p_k > 0$ for some $q_k = 0$\n",
       " * new discovery adds infinite amount of new information\n",
       "* finite if $p_k = 0$ for some $q_k > 0$\n",
       " * not much value for disapproving an existing theory\n",
