--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:5377b3e1c67b417823af15eb78f82b98facd981687d6ecfca2fdc154c48528a7"
+  "signature": "sha256:d67a00941a6326a522f811b0c0d191bbf7c51b6cd636578dbdcdb24958ef1a69"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -629,7 +629,7 @@
       "* Once we find the optimal $\\bs u^*$ that minimizes the dual objective:\n",
       "\n",
       "$$\n",
-      "\\bs p^* = \\frac{\\exp(- A^T \\bs u^*)}{\\bs 1^T \\exp(- A^T \\bs u^*)}\n",
+      "\\bs p^* = \\frac{\\bs q \\cdot \\exp(- A^T \\bs u^*)}{\\bs q^T \\exp(- A^T \\bs u^*)}\n",
       "$$"
      ]
     },
